# indie-game-sim

./: .gitignore  README.md  package.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/domain/: actions.py  engine.py  models.py
backend/app/repos/: json_store.py
backend/app/services/: game_service.py
backend/data/: meta.json.bak
backend/scripts/: run_backend_bg.py  stop_backend_bg.py
backend/tests/: test_engine.py
docs/: concept_research_and_design_ja.md
docs/image-gen/components/bars/: stat_bar_fill_health.md  stat_bar_fill_hp.md  stat_bar_fill_morale.md  stat_bar_frame.md
docs/image-gen/components/buttons/: button_primary_hover.md  button_primary_idle.md  button_primary_press.md
docs/image-gen/components/calendar/: day_dot_empty.md  day_dot_filled.md
docs/image-gen/components/icons/: action_book.md  action_guitar.md  action_invest.md  action_palette.md  currency_coin.md  resource_clover.md  resource_folder.md  resource_heart.md  resource_pc.md
docs/image-gen/components/overlays/: action_popup_frame.md  arrow_next.md
docs/image-gen/components/panels/: currency_panel.md  header_frame.md  name_plate.md  (+2 more)
docs/image-gen/context/: negative.md  project.md  style.md  technical.md
docs/image-gen/jobs/: assets-manifest.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActionPanel.tsx  LogPanel.tsx  MetaPanel.tsx  StatusPanel.tsx
frontend/src/types/: game.ts
tools/: README.md  nanobanana-pro-generate.mjs
tools/image-gen/: build-and-run.mjs
(+15 files in other folders)
