[project]
name = "backend"
version = "0.1.0"
description = "MVP backend for indie life-sim game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
dev = "app.main:run"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
